k8s/ecom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-deployment
  template:
    metadata:
      labels:
        app: ecom-deployment
    spec:
      containers:
        - name: nginx-server
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: share-app-code
              mountPath: /var/www/html

        - name: ecom-deployment
          image: ahmedafk404/laravel-multi-ecom:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: share-app-code
              mountPath: /var/www/html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: share-app-code
          emptyDir: {}
