k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
            - name: init-db
              mountPath: /docker-entrypoint-initdb.d/eCommerce.sql
              subPath: eCommerce.sql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: init-db
          configMap:
            name: init-db
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
