k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ecom.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecom-service
                port:
                  number: 80
    - host: phpmyadmin.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
